Closed
Bug 356493
Opened 19 years ago
Closed 18 years ago
"svg:textpath" ignores presence of "svg:transform" attribute
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: ssen.dev, Assigned: tor)
References
Details
(Keywords: verified1.8.1.2)
Attachments
(2 files)
|
559 bytes,
image/svg+xml
|
Details | |
|
13.69 KB,
patch
|
longsonr
:
review+
roc
:
superreview+
dveditz
:
approval1.8.1.1-
jay
:
approval1.8.1.2+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; de; rv:1.8.1) Gecko/20061003 Firefox/2.0
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; de; rv:1.8.1) Gecko/20061003 Firefox/2.0
if a path has a transform-atribute and is used as a textpath the text appears at the same position as if the transform-attribute would have been omitted.
Reproducible: Always
Steps to Reproduce:
1. put the following lines in a file and open it with firefox
-----
<?xml version="1.0" ?>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
<head>
<title>the same path?</title>
</head>
<body>
<svg:svg width="600" height="400">
<!-- background -->
<svg:rect height="100%" width="100%" fill="grey"/>
<svg:circle cx="100" cy="100" r="75" fill="lightgrey"/>
<svg:circle cx="100" cy="100" r="75" transform="scale(2) translate(100)" fill="lightgrey"/>
<!-- definition of path -->
<svg:defs>
<svg:path transform="scale(2) translate(100)" id="path" d="M 100,25 A 75 75 0 1 1 99,25"/>
</svg:defs>
<!-- draw the path in red -->
<svg:use xlink:href="#path" stroke="red" fill="none"/>
<!-- text along the path dosn't match the drawn path. -> transform is ignored! -->
<svg:text>
<svg:textPath xlink:href="#path">-this text should appear around the big circle and not the small-</svg:textPath>
</svg:text>
</svg:svg>
</body>
</html>
Comment 4•19 years ago
|
||
Comment on attachment 242215 [details] [diff] [review]
branch patch for bug 345488
>Index: layout/svg/base/src/nsSVGDefsFrame.h
...
> protected:
> nsCOMPtr<nsIDOMSVGMatrix> mCanvasTM;
>+ PRBool mPropagateTransform;
Should be PRPackedBool I suppose although it makes no difference in this case and it's only a branch patch.
r=longsonr whether or not you change it.
Attachment #242215 -
Flags: review?(longsonr) → review+
Comment on attachment 242215 [details] [diff] [review]
branch patch for bug 345488
Sure, I'll do the PRBool -> PRPackedBool change.
Attachment #242215 -
Flags: superreview?(roc)
Attachment #242215 -
Flags: superreview?(roc) → superreview+
Comment on attachment 242215 [details] [diff] [review]
branch patch for bug 345488
Specification compliance issue, similar fix has been on the trunk since August 7th.
Attachment #242215 -
Flags: approval1.8.1.1?
Comment 7•19 years ago
|
||
Comment on attachment 242215 [details] [diff] [review]
branch patch for bug 345488
approved for 1.8 branch, a=dveditz for drivers
Attachment #242215 -
Flags: approval1.8.1.1? → approval1.8.1.1+
Comment 8•19 years ago
|
||
Comment on attachment 242215 [details] [diff] [review]
branch patch for bug 345488
Sorry, I have to rescind approval. We need to move non-blockers into the next release.
Attachment #242215 -
Flags: approval1.8.1.2?
Attachment #242215 -
Flags: approval1.8.1.1-
Attachment #242215 -
Flags: approval1.8.1.1+
Comment 9•18 years ago
|
||
Comment on attachment 242215 [details] [diff] [review]
branch patch for bug 345488
Approved for 1.8 branch, a=jay for drivers.
Attachment #242215 -
Flags: approval1.8.1.2? → approval1.8.1.2+
| Assignee | ||
Comment 10•18 years ago
|
||
Checked in on MOZILLA_1_8_BRANCH.
Comment 11•18 years ago
|
||
v.fixed on the 1.8 branch with Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1.2pre) Gecko/20070122 BonEcho/2.0.0.2pre, testcase looks good.
Keywords: fixed1.8.1.2 → verified1.8.1.2
You need to log in
before you can comment on or make changes to this bug.
Description
•