Bug 356493 - "svg:textpath" ignores presence of "svg:transform" attribute. r=longsonr, sr=roc, a=jay