mozilla/layout/svg/base/src/nsSVGDefsFrame.h
@@ -116,7 +116,7 @@ public:
   NS_IMETHOD NotifyCanvasTMChanged();
   NS_IMETHOD NotifyRedrawSuspended();
   NS_IMETHOD NotifyRedrawUnsuspended();
-  NS_IMETHOD SetMatrixPropagation(PRBool aPropagate) { return NS_ERROR_FAILURE; }
+  NS_IMETHOD SetMatrixPropagation(PRBool aPropagate);
   NS_IMETHOD GetBBox(nsIDOMSVGRect **_retval);
   
   // nsISVGContainerFrame interface:
@@ -126,6 +126,7 @@ public:
 
 protected:
   nsCOMPtr<nsIDOMSVGMatrix> mCanvasTM;
+  PRBool mPropagateTransform;
 };
 
 #endif
