mozilla/layout/svg/base/src/nsSVGGFrame.h
@@ -46,8 +46,6 @@ typedef nsSVGDefsFrame nsSVGGFrameBase;
 class nsSVGGFrame : public nsSVGGFrameBase
 {
 public:
-  nsSVGGFrame() : mPropagateTransform(PR_TRUE) {}
-
   /**
    * Get the "type" of the frame
    *
@@ -70,13 +68,7 @@ protected:
   NS_IMETHOD PaintSVG(nsISVGRendererCanvas* canvas, const nsRect& dirtyRectTwips);
   NS_IMETHOD GetFrameForPointSVG(float x, float y, nsIFrame** hit);  
   NS_IMETHOD_(already_AddRefed<nsISVGRendererRegion>) GetCoveredRegion();
-  NS_IMETHOD SetMatrixPropagation(PRBool aPropagate);
   NS_IMETHOD GetBBox(nsIDOMSVGRect **_retval);
-
-  // nsISVGContainerFrame interface:
-  already_AddRefed<nsIDOMSVGMatrix> GetCanvasTM();
-
-  PRBool mPropagateTransform;
 };
 
 #endif
